--- a/src/assets/fonts/iconfont.css
+++ b/src/assets/fonts/iconfont.css
@@ -1,16 +1,20 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3792148 */
-  src: url('iconfont.woff2?t=1684739753041') format('woff2'),
-       url('iconfont.woff?t=1684739753041') format('woff'),
-       url('iconfont.ttf?t=1684739753041') format('truetype');
+  src: url('iconfont.woff2?t=1685611668387') format('woff2'),
+       url('iconfont.woff?t=1685611668387') format('woff'),
+       url('iconfont.ttf?t=1685611668387') format('truetype');
 }
 
 .iconfont {
   font-family: "iconfont" !important;
-  font-size: 30px;
+  font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-caidan:before {
+  content: "\eaf1";
 }
 
 .icon-github:before {
